[gd_scene load_steps=5 format=3 uid="uid://da2orly6xa1ol"]

[ext_resource type="Script" path="res://WallListItem.gd" id="1_8retu"]
[ext_resource type="SystemFont" uid="uid://c40iea64is5gt" path="res://verdana.tres" id="2_ve8mv"]

[sub_resource type="LabelSettings" id="LabelSettings_n1xg8"]
font = ExtResource("2_ve8mv")
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_ijm75"]
font = ExtResource("2_ve8mv")
font_size = 8

[node name="WallListItem" type="Panel"]
custom_minimum_size = Vector2(0, 90)
script = ExtResource("1_8retu")

[node name="PointsList" type="Label" parent="."]
layout_mode = 1
offset_right = 186.0
offset_bottom = 60.0
text = "[(0, 0), (13, 0), (13,17), (0, 17)]"
label_settings = SubResource("LabelSettings_n1xg8")
autowrap_mode = 3

[node name="RaceableCheck" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 118.0
grow_vertical = 0
text = "Raceable"

[node name="EndzoneCheck" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 120.0
offset_top = -31.0
offset_right = 238.0
grow_vertical = 0
text = "Endzone"

[node name="LayerInput" type="SpinBox" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -83.062
offset_top = 34.0
offset_right = 0.000488281
offset_bottom = 65.0
grow_horizontal = 0

[node name="Label" type="Label" parent="LayerInput"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -50.0
offset_right = 1.0
grow_vertical = 2
text = "Layer"
label_settings = SubResource("LabelSettings_ijm75")
horizontal_alignment = 2
vertical_alignment = 1

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -59.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Delete"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="DeleteButton"]
title = "Delete Wall?"
initial_position = 4
ok_button_text = "Delete"

[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="confirmed" from="DeleteButton/ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
